--- a/src/pages/Earthsdk3/index.less
+++ b/src/pages/Earthsdk3/index.less
@@ -1,6 +1,10 @@
 .Earthsdk3Box {
-    canvas {
-        width: 100vw;
-        height: 85vh;
+    // width: 100vw;
+    // height: 85vh;
+    :global {
+        canvas {
+            width: 100vw;
+            height: 85vh;
+        }
     }
 }
